@@ -5,6 +5,13 @@ NEW FEATURES
 
     o mkDemographics is a new function that generates several median age and median OS tables in an Excel file     
 
+Notes
+
+    o There is now an ASCII version of the data with radiatn and chemo as rightmost columns, so please ignore
+    my Note of release 2017.1. My assumption moving forward will be that all users of SEERaBomb will get this
+    "CUSTOM"  dataset by filling out the  data use agreement for it. As such, I've added back radiatn as
+    a default field in pickFields, and  now also have chemo as a default field in pickFields.
+
 
 
 
